# rockchip-android-android-libebook

./: Android.mk  LICENSE  README.md
examples/ebook-demo/: Android.mk  CMakeLists.txt
examples/ebook-demo/src/: main.cpp
lib/Android/rk3576/include/: EBookApi.h  EBookGitVersion.h  EBookImage.h  EBookVersion.h
lib/Android/rk3576/include/allocator/: EBookAllocator.h
lib/Android/rk3576/include/buffer/: EBookBuffer.h  drm_utils.h
lib/Linux/rk3576/include/: EBookGitVersion.h  EBookType.h
lib/Linux/rk3576/include/buffer/: drm_fourcc.h
lib/Linux/rk3576/include/utils/: autofd.h
